Add Car model and Identity initial migration

--- a/FinalMVCProject/appsettings.json
+++ b/FinalMVCProject/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-FinalMVCProject-b61f068d-80b9-4bdd-8bb8-d2b822f3f91e;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.;Database=CarPlace;Trusted_Connection=True;MultipleActiveResultSets=true;Encrypt=false"
   },
   "Logging": {
     "LogLevel": {
